# project-ground-station

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt
docker/: .env  Builder  Dockerfile  Makefile  Runner  docker-compose-apps.yml  docker-compose-db.yml  docker-compose.yml
docker/db/: init.sql
docs/: ground-station-ingestor.md
specs/telemetry-server/: review.md
src/app/: CMakeLists.txt  app-commons.h
src/app/telemetry-api/: CMakeLists.txt  telemetry-udp-api-main.cpp  telemetry-udp-api.cpp  telemetry-udp-api.h
src/app/telemetry-ingestor/: CMakeLists.txt  telemetry-ingestor-main.cpp  telemetry-ingestor.cpp  telemetry-ingestor.h
src/apps/af-unix-telemetry-server/: af-unix-telemetry-server.cpp  af-unix-telemetry-server.h
src/apps/udp-to-af-unix-server/: udp-to-af-unix-main.cpp  udp-to-af-unix-server.cpp  udp-to-af-unix-server.h
src/libs/: CMakeLists.txt
src/libs/logging/: logger.h
src/libs/signal/: signals.h
src/libs/socket/: af-unix-socket.cpp  af-unix-socket.h  udp-socket.cpp  udp-socket.h
src/libs/spsc-queue/: spsc-queue.hpp
src/libs/utils/: env-utils.h
src/telemetry/: CMakeLists.txt
src/telemetry-server/: socket-telemetry-server.cpp  telemetry-server.cpp  udp-telemetry-server.cpp
src/telemetry-server/hpp/: telemetry-server.hpp  telemetry.hpp
src/telemetry-server/spsc-queue/: spsc-queue.hpp
src/telemetry-server/storage/: telemetry-storage.cpp  telemetry-storage.h  telemetry-storage.hpp
src/telemetry/packet/: telemetry-helpers.hpp  telemetry-packet.hpp  telemetry-parser.hpp
src/telemetry/storage/: telemetry-storage.cpp  telemetry-storage.h  telemetry-storage.hpp
test/: CMakeLists.txt  TELEMETRY.pgsql  socket-telemetry-producer.cpp  udp-telemetry-producer.cpp
test/producer/: af-unix-dgram-telemetry-producer.cpp  udp-telemetry-producer.cpp
